# nuro

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
engine-core/: CMakeLists.txt
engine-core/include/backend/: api.h
engine-core/include/ecs/: components.h  ecs.h  entity_container.hpp
engine-core/include/input/: input.h
engine-core/include/physics/core/: physics_bridge.h  physics_context.h
engine-core/include/physics/rigidbody/: rigidbody_enums.h
engine-core/include/rendering/culling/: bounding_volume.h
engine-core/include/rendering/gizmos/: imgizmo.h
engine-core/include/rendering/icons/: icon_pool.h
engine-core/include/rendering/material/: imaterial.h
engine-core/include/rendering/material/lit/: lit_material.h
engine-core/include/rendering/material/unlit/: unlit_material.h
engine-core/include/rendering/model/: mesh.h  model.h
engine-core/include/rendering/passes/: forward_pass.h  pre_pass.h  preprocessor_pass.h  ssao_pass.h
engine-core/include/rendering/postprocessing/: bloom_pass.h  motion_blur_pass.h  post_processing.h  post_processing_pipeline.h
engine-core/include/rendering/sceneview/: scene_view_forward_pass.h
engine-core/include/rendering/shader/: shader.h  shader_pool.h
engine-core/include/rendering/shadows/: shadow_disk.h  shadow_map.h
engine-core/include/rendering/skybox/: cubemap.h  skybox.h
engine-core/include/rendering/texture/: texture.h
engine-core/include/rendering/velocitybuffer/: velocity_buffer.h
engine-core/include/resource/: resource.h  resource_loader.h
engine-core/include/utils/: console.h
engine-core/include/viewport/: viewport.h
engine-core/src/context/: application_context.cpp
engine-core/src/diagnostics/: diagnostics.cpp  profiler.cpp
engine-core/src/ecs/: ecs.cpp  reflection.cpp
engine-core/src/input/: cursor.cpp  input.cpp
engine-core/src/physics/core/: physics_bridge.cpp  physics_context.cpp
engine-core/src/physics/rigidbody/: rigidbody.cpp
engine-core/src/physics/utils/: px_translator.cpp
engine-core/src/rendering/culling/: bounding_volume.cpp
engine-core/src/rendering/gizmos/: component_gizmos.cpp  imgizmo.cpp
engine-core/src/rendering/icons/: icon_pool.cpp
engine-core/src/rendering/material/lit/: lit_material.cpp
engine-core/src/rendering/material/unlit/: unlit_material.cpp
engine-core/src/rendering/model/: mesh.cpp  model.cpp
engine-core/src/rendering/passes/: forward_pass.cpp  pre_pass.cpp  preprocessor_pass.cpp  ssao_pass.cpp
engine-core/src/rendering/postprocessing/: bloom_pass.cpp  motion_blur_pass.cpp  post_processing_pipeline.cpp
engine-core/src/rendering/primitives/: global_quad.cpp
engine-core/src/rendering/sceneview/: scene_view_forward_pass.cpp
engine-core/src/rendering/shader/: shader.cpp  shader_pool.cpp
engine-core/src/rendering/shadows/: shadow_disk.cpp  shadow_map.cpp
engine-core/src/rendering/skybox/: cubemap.cpp  skybox.cpp
engine-core/src/rendering/texture/: texture.cpp
engine-core/src/rendering/transformation/: transformation.cpp
engine-core/src/rendering/velocitybuffer/: velocity_buffer.cpp
engine-core/src/resource/: resource_loader.cpp
engine-core/src/time/: time.cpp
engine-core/src/transform/: transform.cpp
engine-core/src/utils/: console.cpp  iohandler.cpp  string_helper.cpp
engine-core/src/viewport/: viewport.cpp
engine-editor/: cmakelists.txt
engine-editor/include/gizmos/: component_gizmos.h  editor_gizmo_color.h
engine-editor/include/runtime/: runtime.h
engine-editor/include/ui/components/: im_components.h  inspectable_components.h  toggle_bar.h
engine-editor/include/ui/dynamic_drawing/: dynamic_content.h  dynamic_drawing.h  dynamic_text.h
engine-editor/include/ui/inspectables/: entity_inspectable.h  welcome_inspectable.h
engine-editor/include/ui/windows/: asset_browser_window.h  console_window.h  diagnostics_window.h  editor_window.h  game_window.h  insight_panel_window.h  post_processing_window.h  registry_window.h  viewport_window.h
engine-editor/src/: main.cpp
engine-editor/src/example/src/: game_logic.cpp
engine-editor/src/gizmos/: component_gizmos.cpp
engine-editor/src/pipelines/: game_view_pipeline.cpp  preview_pipeline.cpp  scene_view_pipeline.cpp
engine-editor/src/project/: project.cpp
engine-editor/src/runtime/: runtime.cpp
engine-editor/src/ui/: editor_ui.cpp
engine-editor/src/ui/components/: im_components.cpp  inspectable_components.cpp  toggle_bar.cpp
engine-editor/src/ui/context_menu/: context_menu.cpp
engine-editor/src/ui/dynamic_drawing/: dynamic_content.cpp  dynamic_text.cpp
engine-editor/src/ui/footer/: footer.cpp
engine-editor/src/ui/inspectables/: entity_inspectable.cpp  welcome_inspectable.cpp
engine-editor/src/ui/misc/: ui_flex.cpp
engine-editor/src/ui/title_bar/: title_bar.cpp
engine-editor/src/ui/utils/: ui_utils.cpp
engine-editor/src/ui/windows/: asset_browser_window.cpp  console_window.cpp  diagnostics_window.cpp  game_window.cpp  insight_panel_window.cpp  post_processing_window.cpp  registry_window.cpp  viewport_window.cpp
engine-editor/src/ui/workspace_bar/: workspace_bar.cpp
nuro-core/: CMakeLists.txt
nuro-core/audio/: audio_samples.h
nuro-core/diagnostics/: profiler.cpp  profiler.h
nuro-core/rendering/skybox/: cubemap.cpp
nuro-core/utils/: guid.h
nuro-editor/imgui/: imgui_internal.h
nuro-editor/ui/: editor_ui.cpp
